
	* src/qsnet/mqshd.c (mqshell_get_args): Use new check_munge_ip
	function.  Remove calls to gethostname and gethostbyname.
	getpwnam error now outputs "Permission Denied" instead of
	"Internal System Error".  Cleaned up code to be more similar to
	mrshd daemon code.

	Misc

	* src/modules/mqcmd.c (mqcmd): Added munge ctx for better error
	message.

	* src/modules/mcmd.c: Re-worked code to have similar style to mcmd
	module from mrsh project, easing potential bug fixes later on.
	
2003-12-10  Mark Grondona <mgrondona@llnl.gov>
	
	* src/common/Makefile.am, src/modules/Makefile.am, 
	src/pdsh/Makefile.am: No whitespace between -I and arguments -- 
	some compilers (Compaq *cough*) can't handle it.

	* configure.ac: remove -q from grep command lines for portability.

	* src/pdsh/opt.c (opt_register): _init_pdsh_options() doesn't take 
	an arg.

	* src/pdsh/dsh.c (_xsignal): Actually return old signal handler. 

	* src/pdsh/pcp_server.c: Include sys/sysmacros.h on systems that have
	it (for roundup() macro declaration).

	* src/qsnet/qswutil.c: Added qsw_prgsignal.

	* src/qsnet/qshell.c (stderr_parent): Call qsw_prgsignal() abstraction
	instead of rms_prgsignal() directly.

	* src/pdsh/opt.c (opt_default, opt_verify): Only allocate list for
	opt->infile_names if personality == PCP.

	* src/modules/mcmd.c (mcmd): Use a munge ctx for better error msgs.
	
	* src/modules/genders.c: Added ModExitF genders_fini to free any
	memory used by module.

	* src/pdsh/main.c, src/pdsh/dsh.c: Move rcmd_exit() call from dsh()
	back up into main().

2003-12-09  Albert Chu <chu11@llnl.gov>

	* config/ac_nodeupdown.m4: Added check for old vs. new nodeupdown
	APIs.

	* src/modules/nodeupdown.c (remove_all_down_nodes): Added support
	for both old and new nodeupdown APIs.

	* pdsh.spec.in: Changed whatsup >= 1.3 requirement to just
	whatsup.
	
2003-12-09  Albert Chu <chu11@llnl.gov>

	* src/modules/nodeupdown.c (remove_all_down_nodes): Updated for
	change in nodeupdown API version 1.3.
