@@ -295,8 +295,7 @@ _mqcmd_opt_init(opt_t *opt)
 static int mqcmd_init(opt_t * opt)
 {
     int totprocs = nprocs * hostlist_count(opt->wcoll);
-    int rand_fd;
-    ssize_t m_rv;
+    int rv, rand_fd;
 
     /*
      *  Verify constraints for running Elan jobs
@@ -333,23 +332,21 @@ static int mqcmd_init(opt_t * opt)
      * server sets up the stderr socket and sends it to us.
      * We need to loop for the tiny possibility we read 0 :P
      */
-    rand_fd = open ("/dev/urandom", O_RDONLY | O_NONBLOCK);
-    if ( rand_fd < 0 ) {
+    if ((rand_fd = open ("/dev/urandom", O_RDONLY | O_NONBLOCK)) < 0 ) {
         err("%p: mqcmd: Open of /dev/urandom failed\n");
         return -1;
     }
 
     do {
-        m_rv = read (rand_fd, &randy, sizeof(uint32_t));
-        if (m_rv < 0) {
+        if ((rv = read (rand_fd, &randy, sizeof(uint32_t))) < 0) {
             close(rand_fd);
             err("%p: mqcmd: Read of /dev/urandom failed\n");
             return -1;
         }
 
-        if (m_rv < (int) (sizeof(uint32_t))) {
+        if (rv < (int) (sizeof(uint32_t))) {
             close(rand_fd);
-            err("%p: mqcmd: Read of /dev/urandom returned too few bytes\n");
+            err("%p: mqcmd: Read returned too few bytes\n");
             return -1;
         }
     } while (randy == 0);
@@ -463,29 +460,26 @@ mqcmd(char *ahost, char *addr, char *locuser, char *remuser, char *cmd,
 {
     struct sockaddr m_socket;
     struct sockaddr_in *getp;
-    struct sockaddr_in stderr_sock;
     struct sockaddr_in sin, from;
     struct sockaddr_storage ss;
     struct in_addr m_in;
     unsigned int rand, randl;
     unsigned char *hptr;
-    int s, lport, rv;
-    int mcount;
-    int s2, s3;
+    int s, s2, rv, mcount, lport;
     char c;
     char num[6] = {0};
     char *mptr;
     char *mbuf;
     char *tmbuf;
-    char haddrdot[16] = {0};
     char *m;
-    size_t len;
-    ssize_t m_rv;
+    char *mpvers;
+    char num_seq[12] = {0};
+    socklen_t len;
     sigset_t blockme;
     sigset_t oldset;
-    struct xpollfd xpfds[2];
-    char num_seq[12] = {0};
+    char haddrdot[16] = {0};
     munge_ctx_t ctx;
+    struct xpollfd xpfds[2];
 
     sigemptyset(&blockme);
     sigaddset(&blockme, SIGURG);
@@ -510,8 +504,7 @@ mqcmd(char *ahost, char *addr, char *locuser, char *remuser, char *cmd,
     lport = 0;
     len = sizeof(struct sockaddr_in);
 
-    s = socket(AF_INET, SOCK_STREAM, 0);
-    if (s < 0) {
+    if ((s = socket(AF_INET, SOCK_STREAM, 0)) < 0) {
         err("%p: %S: mqcmd: socket call stdout failed: %m\n", ahost);
         EXIT_PTHREAD();
     }
@@ -519,8 +512,7 @@ mqcmd(char *ahost, char *addr, char *locuser, char *remuser, char *cmd,
     memset (&ss, '\0', sizeof(ss));
     ss.ss_family = AF_INET;
 
-    rv = bind(s, (struct sockaddr *)&ss, len); 
-    if (rv < 0) {
+    if (bind(s, (struct sockaddr *)&ss, len) < 0) {
         err("%p: %S: mqcmd: bind failed: %m\n", ahost);
         goto bad;
     }
@@ -530,33 +522,32 @@ mqcmd(char *ahost, char *addr, char *locuser, char *remuser, char *cmd,
     memcpy(&sin.sin_addr.s_addr, addr, IP_ADDR_LEN); 
 
     sin.sin_port = htons(MQSH_PORT);
-    rv = connect(s, (struct sockaddr *)&sin, sizeof(sin));
-    if (rv < 0) {
+    if (connect(s, (struct sockaddr *)&sin, sizeof(sin)) < 0) {
         err("%p: %S: mqcmd: connect failed: %m\n", ahost);
         goto bad;
     }
 
-    /*
-     * Start the socket setup for the stderr.
-     */
     lport = 0;
     s2 = -1;
     if (fd2p != NULL) {
+        /*
+         * Start the socket setup for the stderr.
+         */
+        struct sockaddr_in sin2;
 
-        s2 = socket(AF_INET, SOCK_STREAM, 0);
-        if (s2 < 0) {
+        if ((s2 = socket(AF_INET, SOCK_STREAM, 0)) < 0) {
             err("%p: %S: mqcmd: socket call for stderr failed: %m\n", ahost);
             goto bad;
         }
 
-        memset (&stderr_sock, 0, sizeof(stderr_sock));
-        stderr_sock.sin_family = AF_INET;
-        stderr_sock.sin_addr.s_addr = htonl(INADDR_ANY);
-        stderr_sock.sin_port = 0;
+        memset (&sin2, 0, sizeof(sin2));
+        sin2.sin_family = AF_INET;
+        sin2.sin_addr.s_addr = htonl(INADDR_ANY);
+        sin2.sin_port = 0;
 
-        if (bind(s2, (struct sockaddr *)&stderr_sock, sizeof(stderr_sock)) < 0) {
+        if (bind(s2, (struct sockaddr *)&sin2, sizeof(sin2)) < 0) {
+            err("%p: %S: mqcmd: bind failed: %m\n", ahost);
             close(s2);
-            err("%p: %S: bind failed: %m\n", ahost);
             goto bad;
         }
 
@@ -569,19 +560,17 @@ mqcmd(char *ahost, char *addr, char *locuser, char *remuser, char *cmd,
 
         /* getsockname is thread safe */
         if (getsockname(s2,&m_socket,&len) < 0) {
+            err("%p: %S: mqcmd: getsockname failed: %m\n", ahost);
             close(s2);
-            err("%p: %S: getsockname failed: %m\n", ahost);
             goto bad;
         }
 
         getp = (struct sockaddr_in *)&m_socket;
-
         lport = ntohs(getp->sin_port);
 
-        rv = listen(s2, 1);
-        if (rv < 0) {
-            close(s2);
+        if (listen(s2, 1) < 0) {
             err("%p: %S: mqcmd: listen() failed: %m\n", ahost);
+            close(s2);
             goto bad;
         }
     }
@@ -627,8 +616,8 @@ mqcmd(char *ahost, char *addr, char *locuser, char *remuser, char *cmd,
             (strlen(num_seq)+1) + strlen(cmd)+2);
     tmbuf = mbuf = malloc(mcount);
     if (tmbuf == NULL) {
-        close(s2);
         err("%p: %S: mqcmd: Error from malloc\n", ahost);
+        close(s2);
         goto bad;
     }
     /*
@@ -649,11 +638,11 @@ mqcmd(char *ahost, char *addr, char *locuser, char *remuser, char *cmd,
 
     ctx = munge_ctx_create();
 
-    if ((m_rv = munge_encode(&m,0,mbuf,mcount)) != EMUNGE_SUCCESS) {
-        close(s2);
-        free(tmbuf);
+    if ((rv = munge_encode(&m,0,mbuf,mcount)) != EMUNGE_SUCCESS) {
         err("%p: %S: mqcmd: munge_encode: %S\n", ahost, munge_ctx_strerror(ctx));
         munge_ctx_destroy(ctx);
+        close(s2);
+        free(tmbuf);
         goto bad;
     }
 
@@ -667,15 +656,14 @@ mqcmd(char *ahost, char *addr, char *locuser, char *remuser, char *cmd,
      * doesn't want stderr
      */
     if (fd2p != NULL) {
-        m_rv = fd_write_n(s, num, strlen(num)+1);
-        if (m_rv != (strlen(num)+1)) {
+        rv = fd_write_n(s, num, strlen(num)+1);
+        if (rv != (strlen(num)+1)) {
             free(m);
             free(tmbuf);
             if (errno == EPIPE)
-                err("%p: %S: mqcmd: Lost connection: %m\n", ahost);
+                err("%p: %S: mqcmd: Lost connection (EPIPE): %m\n", ahost);
             else
-                err("%p: %S: mqcmd: "
-                    "Write of stderr port num to socket failed: %m\n", ahost);
+                err("%p: %S: mqcmd: Write of stderr port failed: %m\n", ahost);
             close(s2);
             goto bad;
         }
@@ -687,16 +675,15 @@ mqcmd(char *ahost, char *addr, char *locuser, char *remuser, char *cmd,
     /*
      * Write the munge_encoded blob to the socket.
      */
-    m_rv = fd_write_n(s, m, mcount);
-    if (m_rv != mcount) {
-        close(s);
-        close(s2);
+    rv = fd_write_n(s, m, mcount);
+    if (rv != mcount) {
         free(m);
         free(tmbuf);
         if (errno == EPIPE)
             err("%p: %S: mqcmd: Lost connection: %m\n", ahost);
         else
             err("%p: %S: mqcmd: Write to socket failed: %m\n", ahost);
+        close(s2);
         goto bad;
     }
 
@@ -704,11 +691,18 @@ mqcmd(char *ahost, char *addr, char *locuser, char *remuser, char *cmd,
     free(tmbuf);
 
     if (fd2p != NULL) {
+        /*
+         * Wait for stderr connection from daemon.
+         */
+        int s3;
+      
         errno = 0;
         xpfds[0].fd = s;
         xpfds[1].fd = s2;
         xpfds[0].events = xpfds[1].events = XPOLLREAD;
-        if (((rv = xpoll(xpfds, 2, -1)) < 0) || rv != 1 || (xpfds[0].revents > 0)) {
+        if (  ((rv = xpoll(xpfds, 2, -1)) < 0) 
+            || rv != 1 
+            || (xpfds[0].revents > 0)) {
             if (errno != 0)
                 err("%p: %S: mqcmd: xpoll (setting up stderr): %m\n", ahost);
             else
@@ -717,18 +711,30 @@ mqcmd(char *ahost, char *addr, char *locuser, char *remuser, char *cmd,
             goto bad;
         }
 
+        errno = 0;
         len = sizeof(from); /* arg to accept */
-        s3 = accept(s2, (struct sockaddr *)&from, &len);
-        if (s3 < 0) {
+
+        if ((s3 = accept(s2, (struct sockaddr *)&from, &len)) < 0) {
             close(s2);
             err("%p: %S: mqcmd: accept (stderr) failed: %m\n", ahost);
             goto bad;
         }
 
+        if (from.sin_family != AF_INET) {
+            err("%p: %S: mqcmd: bad family type: %d\n", ahost, from.sin_family);
+            goto bad2;
+        }
+
         close(s2);
 
+        /*
+         * The following fixes a race condition between the daemon
+         * and the client.  The daemon is waiting for a null to
+         * proceed.  We do this to make sure that we have our
+         * socket is up prior to the daemon running the command.
+         */
         if (write(s,"",1) < 0) {
-            err("%p: %S: mqcmd: Cannot communicate with daemon to proceed: %m\n", ahost);
+            err("%p: %S: mqcmd: Could not communicate to daemon to proceed: %m\n", ahost);
             close(s3);
             goto bad;
         }
@@ -737,8 +743,8 @@ mqcmd(char *ahost, char *addr, char *locuser, char *remuser, char *cmd,
          * Read from our stderr.  The server should have placed our random number
          * we generated onto this socket.
          */
-        m_rv = fd_read_n(s3, &rand, sizeof(rand));
-        if (m_rv != (ssize_t) (sizeof(rand))) {
+        rv = fd_read_n(s3, &rand, sizeof(rand));
+        if (rv != (ssize_t) (sizeof(rand))) {
             err("%p: %S: mqcmd: Bad read of expected verification "
                     "number off of stderr socket: %m\n", ahost);
             close(s3);
@@ -752,8 +758,8 @@ mqcmd(char *ahost, char *addr, char *locuser, char *remuser, char *cmd,
 
             memcpy(tptr,(char *) &rand,sizeof(rand));
             tptr += sizeof(rand);
-            m_rv = fd_read_line (s3, tptr, LINEBUFSIZE);
-            if (m_rv < 0)
+            rv = fd_read_line (s3, tptr, LINEBUFSIZE);
+            if (rv < 0)
                 err("%p: %S: mqcmd: Bad read of error from stderr: %m\n", ahost);
             else
                 err("%p: %S: mqcmd: Error: %s\n", ahost, &tmpbuf[0]);
@@ -765,11 +771,6 @@ mqcmd(char *ahost, char *addr, char *locuser, char *remuser, char *cmd,
          * Set the stderr file descriptor for the user...
          */
         *fd2p = s3;
-        from.sin_port = ntohs((u_short)from.sin_port);
-        if (from.sin_family != AF_INET) {
-            err("%p: %S: mqcmd: socket: protocol failure in circuit setup\n", ahost);
-            goto bad2;
-        }
     }
 
     /* send extra information */
@@ -778,13 +779,12 @@ mqcmd(char *ahost, char *addr, char *locuser, char *remuser, char *cmd,
         goto bad2;
     }
 
-    m_rv = read(s, &c, 1);
-    if (m_rv < 0) {
+    if ((rv = read(s, &c, 1)) < 0) {
         err("%p: %S: mqcmd: read: protocol failure: %m\n", ahost);
         goto bad2;
     }
 
-    if (m_rv != 1) {
+    if (rv != 1) {
         err("%p: %S: mqcmd: read: protocol failure: invalid response\n", ahost);
         goto bad2;
     }
@@ -793,8 +793,7 @@ mqcmd(char *ahost, char *addr, char *locuser, char *remuser, char *cmd,
         /* retrieve error string from remote server */
         char tmpbuf[LINEBUFSIZE];
 
-        m_rv = fd_read_line (s, &tmpbuf[0], LINEBUFSIZE);
-        if (m_rv < 0)
+        if (fd_read_line (s, &tmpbuf[0], LINEBUFSIZE) < 0)
             err("%p: %S: mqcmd: Error from remote host\n", ahost);
         else
             err("%p: %S: %s\n", ahost, tmpbuf);
@@ -805,7 +804,7 @@ mqcmd(char *ahost, char *addr, char *locuser, char *remuser, char *cmd,
     return (s);
 
 bad2:
-    if (fd2p != NULL)
+    if (lport)
         close(*fd2p);
 bad:
     close(s);
